--- a/SpringMybatis/.settings/org.eclipse.core.resources.prefs
+++ b/SpringMybatis/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java=utf-8
 encoding//src/main/resources/jdbc.properties=UTF-8
 encoding//src/main/resources/log4j.properties=UTF-8
+encoding//src/test/java=utf-8
